[PLST-6177] | [BulkPro - Hot Move - Show Empty Location is not displaying correct empty locations due to Extra spaces in Bin on inventory map ] | [Fixes In Inventory Map and Transactions] (#1304)

--- a/src/app/admin/inventory-map/inventory-map.component.scss
+++ b/src/app/admin/inventory-map/inventory-map.component.scss
@@ -9,7 +9,11 @@
 }
 .container-table-data{
 
-    padding: 10px 12px; text-overflow: ellipsis; overflow: hidden; max-width: 20ch; white-space: nowrap;
+    padding: 10px 12px; 
+    text-overflow: ellipsis; 
+    overflow: hidden; 
+    max-width: 20ch; 
+    // white-space: nowrap;
 }
 .filter
 {
